exports[`test should renders <DeviceDetail> correctly 1`] = `
<div>
  <HelmetWrapper
    title="deviceName" />
  <MobileHeader
    leftChildren={
      <MobileHeaderIcon
        component={[Function]}
        to={[Function]}>
        <IconArrowLeft
          size="1em" />
      </MobileHeaderIcon>
    }
    rightChildren={
      Array [
        <MobileHeaderIcon
          component={[Function]}
          onClick={[Function]}>
          <IconMoreVert
              size="1em" />
      </MobileHeaderIcon>,
        false,
      ]
    }
    title="deviceName" />
  <main>
    <PullToRefresh
      IconArrow={[Function]}
      IconLoading={[Function]}
      isLoading={false}
      onPull={[Function]}>
      <div>
        <styled.div
          size="cover"
          src="https://img.mediatek.com/600/mtk.linkit/productBanner.png" />
        <styled.div>
          <styled.div />
        </styled.div>
      </div>
    </PullToRefresh>
  </main>
</div>
`;

exports[`test should renders <DeviceDetail> correctly when Menu show 1`] = `
<div>
  <HelmetWrapper />
  <MobileHeader
    leftChildren={
      <MobileHeaderIcon
        component={[Function]}
        to={[Function]}>
        <IconArrowLeft
          size="1em" />
      </MobileHeaderIcon>
    }
    rightChildren={
      Array [
        <MobileHeaderIcon
          component={[Function]}
          onClick={[Function]}>
          <IconMoreVert
              size="1em" />
      </MobileHeaderIcon>,
        <Overlay
          alignConfig={
              Object {
                  "offset": Array [
                    20,
                    -20,
                  ],
                  "points": Array [
                    "tr",
                    "bc",
                  ],
                }
          }
          onClickOutSide={[Function]}
          transitionConfig={
              Object {
                  "component": false,
                  "enter": Object {
                    "translateY": 0,
                  },
                  "leave": Object {
                    "translateY": -10,
                  },
                }
          }>
          <Menu>
              <Styled(Link)
                  to={[Function]}>
                  <MenuItem>
                      deviceIntro
                  </MenuItem>
              </Styled(Link)>
              <Styled(Link)
                  to={[Function]}>
                  <MenuItem>
                      triggerAndAction
                  </MenuItem>
              </Styled(Link)>
          </Menu>
      </Overlay>,
      ]
    } />
  <main>
    <PullToRefresh
      IconArrow={[Function]}
      IconLoading={[Function]}
      isLoading={false}
      onPull={[Function]}>
      <div>
        <styled.div
          size="cover"
          src="https://img.mediatek.com/600/mtk.linkit/productBanner.png" />
        <styled.div>
          <styled.div />
        </styled.div>
      </div>
    </PullToRefresh>
  </main>
</div>
`;
